sokoban v2 - le plan 1